--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "dist/simple-react-validator.min.js",
   "type": "module",
   "types": "src/index.d.ts",
+  "files": [
+    "/dist",
+    "/src/index.d.ts"
+  ],
   "dependencies": {
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.1",
+    "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
-    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-env": "^7.19.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-inject-string": "^1.1.2",
