--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@egomaw/react-validator",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A simple react form validator inspired by Laravel validation.",
   "main": "dist/simple-react-validator.min.js",
   "type": "module",
@@ -10,7 +10,7 @@
     "/src/index.d.ts"
   ],
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
