--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "/dist",
     "/src/index.d.ts"
   ],
-  "dependencies": {
-    "lodash-es": "^4.17.21"
-  },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -23,7 +20,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-umd": "^2.0.0",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "lodash-es": "^4.17.21"
   },
   "engines": {
     "node": ">=14.16"
