--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules/
 .yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+!.yarn/patches/*
+!.yarn/plugins/*
+!.yarn/releases/*
+!.yarn/sdks/*
+!.yarn/versions/*
 .vscode/
 .idea/
