--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@egomaw/react-validator",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "A simple react form validator inspired by Laravel validation.",
   "main": "dist/simple-react-validator.min.js",
   "type": "module",
@@ -10,26 +10,27 @@
     "/src/index.d.ts"
   ],
   "devDependencies": {
-    "@babel/core": "^7.19.6",
+    "@babel/core": "^7.22.5",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.19.4",
-    "@babel/preset-env": "^7.19.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.22.5",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-inject-string": "^1.1.2",
     "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-umd": "^2.0.0",
-    "gulp-util": "^3.0.8",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "ansi-colors": "^4.1.3",
+    "fancy-log": "^2.0.0"
   },
   "engines": {
     "node": ">=14.16"
   },
   "scripts": {
-    "dist": "yarn gulp dist",
-    "watch": "yarn gulp watch",
-    "prepare": "yarn run dist",
+    "dist": "pnpm gulp dist",
+    "watch": "pnpm gulp watch",
+    "prepare": "pnpm run dist",
     "serve": "python -m http.server 3100"
   },
   "repository": {
@@ -48,6 +49,5 @@
   "bugs": {
     "url": "https://github.com/EgoMaw/simple-react-validator/issues"
   },
-  "homepage": "https://github.com/EgoMaw/simple-react-validator#readme",
-  "packageManager": "yarn@3.2.4"
+  "homepage": "https://github.com/EgoMaw/simple-react-validator#readme"
 }
