--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@egomaw/react-validator",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "A simple react form validator inspired by Laravel validation.",
   "main": "dist/simple-react-validator.min.js",
   "type": "module",
@@ -10,19 +10,19 @@
     "/src/index.d.ts"
   ],
   "devDependencies": {
-    "@babel/core": "^7.22.5",
+    "@babel/core": "^7.22.8",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-env": "^7.22.7",
+    "ansi-colors": "^4.1.3",
+    "fancy-log": "^2.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-inject-string": "^1.1.2",
     "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-umd": "^2.0.0",
-    "lodash-es": "^4.17.21",
-    "ansi-colors": "^4.1.3",
-    "fancy-log": "^2.0.0"
+    "lodash-es": "^4.17.21"
   },
   "engines": {
     "node": ">=14.16"
